crates/fasti/tests/snapshots/contract__derived_unspanned.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&unspanned)
---
[
  {
    "core": "fasti",
    "data": {
      "values": [
        "stray"
      ]
    },
    "home": "aof",
    "key": "20260720",
    "kind": "event",
    "refs": [],
    "series": "standups"
  },
  {
    "core": "fasti",
    "data": {
      "values": [
        "self referential"
      ]
    },
    "home": "aof",
    "key": "20260721",
    "kind": "event",
    "refs": [
      "fasti:standups"
    ],
    "series": "standups"
  },
  {
    "core": "fasti",
    "data": {
      "values": [
        "quiet"
      ]
    },
    "home": "aof",
    "key": "20260722",
    "kind": "event",
    "refs": [],
    "series": "standups"
  }
]
