crates/fasti/tests/snapshots/contract__dispatch_edit_by_shape.snap
---
source: crates/fasti/tests/contract.rs
expression: out
---
$ fas edit mvp --to 20260901
{
  "core": "fasti",
  "data": {
    "from": "20260101",
    "to": "20260901"
  },
  "home": "aof",
  "kind": "span",
  "refs": [],
  "slug": "mvp"
}

$ fas edit 20260719 'kickoff done'
{
  "core": "fasti",
  "data": {
    "values": [
      "kickoff done"
    ]
  },
  "home": "aof",
  "key": "20260719",
  "kind": "event",
  "refs": [],
  "series": "standups"
}
