crates/fasti/tests/snapshots/contract__on_disk_event_file.snap
---
source: crates/fasti/tests/contract.rs
expression: events.clone()
---
{"key":"20260719","refs":["fasti:mvp_phase"],"data":{"values":["kickoff"]}}
{"key":"20260720T1400","refs":[],"data":{"values":["demo"],"until":"1500"}}
