crates/fasti/tests/snapshots/contract__on_disk_span_file.snap
---
source: crates/fasti/tests/contract.rs
expression: span.clone()
---
{
  "refs": [],
  "data": {
    "from": "20260101",
    "to": "20260630"
  }
}
