crates/fasti/tests/snapshots/contract__refusal_move_entity_node.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&moved)
---
{
  "error": {
    "code": 2,
    "msg": "\"mvp_phase\" is an entity-as-node: its home is its own node, so re-homing it is a node move — use `pan mv aof_mvp_phase --to <code>`. A file mv would strand the node and everything homed at it (§5.5, §7.2, I3)"
  }
}
