crates/fasti/tests/snapshots/contract__refusal_rename_entity_node.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&renamed)
---
{
  "error": {
    "code": 2,
    "msg": "\"mvp_phase\" is an entity-as-node: its slug is its node's definition, so renaming it renames the node, which no core may do — use `pan rename aof_mvp_phase --def <new>` (§5.5, §7.2)"
  }
}
