crates/fasti/tests/snapshots/contract__refusal_rename_onto_other_shape.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&err)
---
{
  "error": {
    "code": 3,
    "msg": "fasti:standups already names a record at aoa — renaming onto it would make the two indistinguishable, and there is no history to tell them apart again (§7.2, §18)"
  }
}
