crates/fasti/tests/snapshots/contract__refusal_span_onto_event_series.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&err)
---
{
  "error": {
    "code": 3,
    "msg": "aof already holds \"standups\" as an event series: two shapes spell two files but only one `fasti:standups`, so the ref would be ambiguous (§5.4, §18)"
  }
}
